--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
    - echo Logging in to Amazon ECR...
    - aws --version
    - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-   - REPOSITORY_URI=719472067992.dkr.ecr.us-west-1.amazonaws.com/neurosales
+   - REPOSITORY_URI=719472067992.dkr.ecr.us-west-1.amazonaws.com/neurotest0204
    - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
  build:
   commands:
