--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
   commands:
    - echo Logging in to Amazon ECR...
    - aws --version
-   - eval $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email | sed ‘s|https://||’)
+   - eval $(aws ecr get-login --no-include-email | sed ‘s|https://||’)
    - REPOSITORY_URI=719472067992.dkr.ecr.us-west-1.amazonaws.com/neurotest0204
    - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
  build:
