--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,19 +7,17 @@ phases:
    - aws --version
    - aws ecr get-login
    - REPOSITORY_URI=719472067992.dkr.ecr.us-west-1.amazonaws.com/neurotest0204
-   - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+   - IMAGE_TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
  build:
   commands:
    - echo Build started on `date`
    - echo Building the docker images....
-   - docker build -t $REPOSITORY_URI:latest .
-   - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+   - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
  post_build:
   commands:
    - echo Build completed on `date`
    - echo Pushing the docker images...
-   - docker push $REPOSITORY_URI:latest
-   - docker push $REPOSITORY_URI:$IMAGE_TAG
+   - docker push "$REPOSITORY_URI:$IMAGE_TAG"
    - echo Writing image definitions file...
    - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
