--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
    - $(aws ecr get-login --no-include-email --region us-west-1)
    - docker push "$REPOSITORY_URI:$IMAGE_TAG"
    - echo Writing image definitions file...
-   - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+   - printf '{"Image":"%s:%s"}' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
  files: 
   - imagedefinitions.json
