--- a/service.yml
+++ b/service.yml
@@ -25,7 +25,7 @@ Resources:
       - Name: Neuro
       - Image: !Ref Image
       - Memory: 512
-      - essential: true
+      - Essential: true
       - PortMappings:
         - protocol: tcp
           containerPort: 8080
