--- a/service.yml
+++ b/service.yml
@@ -1,11 +1,14 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'AWS CloudFormation for creating ECS services..'
+Description: AWS CloudFormation for creating ECS services..
 Parameters:
   Cluster:
     Type: String
   DesiredCount:
-    Type: String
+    Type: Number
   Image:
+    Type: String
+  Containername:
     Type: String
   Role:
     Type: String
@@ -13,20 +16,30 @@ Resources:
   Service:
     Type: AWS::ECS::Service
     Properties:
-      Cluster: !Ref Cluster
-      DesiredCount: !Ref DesiredCount
-      Role: !Ref Role
-      TaskDefinition: !Ref TaskDefinition
+      Cluster:
+        Ref: Cluster
+      Role:
+        Ref: Role
+      TaskDefinition:
+        Ref: TaskDefinition
+      DesiredCount:
+        Ref: DesiredCount
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
       Family: Service
       ContainerDefinitions:
-      - Name: testingcon
-      - Image: !Ref Image
-      - Memory: 512
-      - Essential: true
-      - PortMappings:
+      - Name:
+          Ref: Containername
+        Image:
+          Ref: Image
+        Memory: 512
+        Essential: true
+        PortMappings:
         - Protocol: tcp
           ContainerPort: 8080
           HostPort: 8080
+        - Protocol: tcp
+          ContainerPort: 3000
+          HostPort: 3000
+
