Update service.yml file

--- a/service.yml
+++ b/service.yml
@@ -30,6 +30,11 @@ Resources:
         ContainerPort: '8080'
         LoadBalancerName:
           Ref: LoadBalancerName
+      - ContainerName:
+          Ref: Containername
+        ContainerPort: '3000'
+        LoadBalancerName:
+          Ref: LoadBalancerName
       DesiredCount:
         Ref: DesiredCount
   TaskDefinition:
